<resources>
    <string name="app_name" translatable="false">TogeTrail</string>
    <string name="menu_map">Map</string>
    <string name="menu_trails">Trails</string>
    <string name="menu_events">Events</string>
    <string name="menu_user_profile">My profile</string>
    <string name="menu_user_trails">My trails</string>
    <string name="menu_user_events">My events</string>
    <string name="menu_user_settings">My settings</string>
    <string name="menu_user_login">Log in / off</string>
    <string name="menu_new_trail">New trail</string>
    <string name="menu_new_event">New event</string>
    <string name="menu_new_trail_load_gpx">Load GPX</string>
    <string name="menu_new_trail_draw">Draw on map</string>
    <string name="menu_new_trail_record">Realtime record</string>
    <string name="menu_edit_edit">Edit</string>
    <string name="menu_save_save">Save</string>
    <string name="menu_chat_chat">Chat</string>
    <string name="menu_search_search">Search</string>
    <string name="toolbar_hiker_profile">Hiker</string>
    <string name="toolbar_hiker_my_profile">My profile</string>
    <string name="toolbar_hiker_my_trails">My trails</string>
    <string name="toolbar_hiker_my_events">My events</string>
    <string name="toolbar_hiker_my_settings">My settings</string>
    <string name="toolbar_trail">Trail</string>
    <string name="toolbar_trail_draw">Draw a track</string>
    <string name="toolbar_trail_record">Record a track</string>
    <string name="toolbar_trail_info">Trail info</string>
    <string name="toolbar_trail_poi_info">Point of interest info</string>
    <string name="toolbar_event">Event</string>
    <string name="toolbar_event_select_trails">Select trails</string>
    <string name="toolbar_chat">Chat</string>
    <string name="navigation_drawer_open">Opening navigation drawer</string>
    <string name="navigation_drawer_close">Closing navigation drawer</string>
    <string name="button_common_ok">OK</string>
    <string name="button_common_yes">Yes</string>
    <string name="button_common_no">No</string>
    <string name="button_common_cancel">Cancel</string>
    <string name="button_common_sign_in">Sign in</string>
    <string name="button_common_inform">Inform</string>
    <string name="button_common_activate">Activate</string>
    <string name="button_common_select_photo">Select a photo</string>
    <string name="button_common_take_photo">Take a new photo</string>
    <string name="button_common_retry">Retry</string>
    <string name="button_location_search_in_area">Search within this area</string>
    <string name="button_chat_send_message">Send a message</string>
    <string name="button_trail_info_see">Trail\'s info</string>
    <string name="button_trail_point_remove">Remove last point</string>
    <string name="button_trail_poi_add">Add point of interest</string>
    <string name="button_trail_poi_remove">Remove</string>
    <string name="button_trail_metric_reset">Reset</string>
    <string name="button_hiker_password_reset">Reset my password</string>
    <string name="button_hiker_account_delete">Delete my account</string>
    <string name="button_event_add_trails">Add trails</string>
    <string name="button_event_validate_selected_trails">Validate</string>
    <string name="button_event_register_user">Register</string>
    <string name="button_event_unregister_user">Unregister</string>
    <string name="button_event_cancel">Cancel</string>
    <string name="button_event_restore">Restore</string>
    <string name="label_common_text_separator"> - </string>
    <string name="label_location">Location</string>
    <string name="label_location_country">Country</string>
    <string name="label_location_region">State / Region</string>
    <string name="label_location_town">City / Town</string>
    <string name="label_location_address">Place / Address</string>
    <string name="label_location_search">Search a place</string>
    <string name="label_chat">Chat</string>
    <string name="label_chat_write_message">Write your message</string>
    <string name="label_trail_main_info">Main info</string>
    <string name="label_trail_name">Name</string>
    <string name="label_trail_description">Description</string>
    <string name="label_trail_level">Level</string>
    <string name="label_trail_level_unknown">Lvl Unknown</string>
    <string name="label_trail_level_easy">Lvl Easy</string>
    <string name="label_trail_level_medium">Lvl Medium</string>
    <string name="label_trail_level_hard">Lvl Hard</string>
    <string name="label_trail_loop">Return to starting point</string>
    <string name="label_trail_metrics">Metrics</string>
    <string name="label_trail_ascent_short">Asc</string>
    <string name="label_trail_descent_short">Desc</string>
    <string name="label_trail_distance_short">Dist</string>
    <string name="label_trail_max_elevation_short">Max elv</string>
    <string name="label_trail_min_elevation_short">Min elv</string>
    <string name="label_trail_author">Created by %s</string>
    <string name="label_trail_list_last_added">Last trails</string>
    <string name="label_trail_list_my_trails">My own trails</string>
    <string name="label_trail_list_nearby_home">Trails near my home</string>
    <string name="label_trail_list_liked">Trails I liked</string>
    <string name="label_trail_list_marked">Trails I marked</string>
    <string name="label_trail_list_current_research">Current research</string>
    <string name="label_trail_poi_main_info">Main info</string>
    <string name="label_trail_poi_name">Name</string>
    <string name="label_trail_poi_description">Description</string>
    <string name="label_trail_poi_metrics">Metrics</string>
    <string name="label_trail_poi_elevation">Elevation</string>
    <string name="label_hiker_info">My info</string>
    <string name="label_hiker_name">My name</string>
    <string name="label_hiker_birthday">My birthday</string>
    <string name="label_hiker_age">years old</string>
    <string name="label_hiker_live_location">My home</string>
    <string name="label_hiker_description">About me</string>
    <string name="label_hiker_description2">Some words about me</string>
    <string name="label_hiker_email">My email</string>
    <string name="label_hiker_registration_date">Member since</string>
    <string name="label_hiker_write_email_address">New email address</string>
    <string name="label_hiker_account">My account</string>
    <string name="label_hiker_trails_created_sing">created\ntrail</string>
    <string name="label_hiker_trails_created_plur">created\ntrails</string>
    <string name="label_hiker_events_created_sing">created\nevent</string>
    <string name="label_hiker_events_created_plur">created\nevents</string>
    <string name="label_hiker_events_registered_sing">event\nregistration</string>
    <string name="label_hiker_events_registered_plur">events\nregistrations</string>
    <string name="label_hiker_history">My history</string>
    <string name="label_hiker_history_hiker_registered">registered on TogeTrail</string>
    <string name="label_hiker_history_trail_created">created a new trail in</string>
    <string name="label_hiker_history_event_created">created a new event in</string>
    <string name="label_hiker_history_event_attended">decided to attend an event in</string>
    <string name="label_hiker_search">Search a hiker</string>
    <string name="label_event_main_info">Main info</string>
    <string name="label_event_name">Name</string>
    <string name="label_event_begin_date">Begin</string>
    <string name="label_event_end_date">End</string>
    <string name="label_event_date">Date</string>
    <string name="label_event_time">Time</string>
    <string name="label_event_meeting">Let\'s meet on</string>
    <string name="label_event_meeting_point">Meeting point</string>
    <string name="label_event_description">Description</string>
    <string name="label_event_description2">Some information for the attendees</string>
    <string name="label_event_attached_trails">Trails on schedule</string>
    <string name="label_event_user_registered">I attend</string>
    <string name="label_event_user_facilitate">I facilitate this event</string>
    <string name="label_event_registered_hikers_sing">person attend</string>
    <string name="label_event_registered_hikers_plur">persons attend</string>
    <string name="label_event_author">Facilitated by %s</string>
    <plurals name="label_event_nb_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="label_event_day">day</string>
    <string name="label_event_days">days</string>
    <string name="label_event_list_i_attend">I attend</string>
    <string name="label_event_list_next_events">Next events</string>
    <string name="label_event_list_my_events">My own events</string>
    <string name="label_event_list_nearby_home">Events near my home</string>
    <string name="label_event_list_current_research">Current research</string>
    <string name="example_image_content_description">Image</string>
    <string name="example_number">10</string>
    <string name="example_date">06/30/2020</string>
    <string name="example_location">Chamonix, Savoie, France</string>
    <string name="example_location_fine">1 rue de la Montagne\nChamonix\nSavoie\nFrance</string>
    <string name="example_location_country">France</string>
    <string name="example_location_region">Savoie</string>
    <string name="example_chat_user_name">Toto</string>
    <string name="example_chat_date">06/30/2020</string>
    <string name="example_chat_user_name_and_date">Toto - 06/30/2020</string>
    <string name="example_chat_message">Hey guys ! How are you ? Are you happy yo trail together ? I am, this is very cool !</string>
    <string name="example_trail_name">The super century\s trail</string>
    <string name="example_trail_description">A really wonderful trail.</string>
    <string name="example_trail_duration">1 h</string>
    <string name="example_trail_ascent">500 m\nAsc</string>
    <string name="example_trail_descent">500 m\nDesc</string>
    <string name="example_trail_distance">10 km\nDist</string>
    <string name="example_trail_max_elevation">2000 m\nMax elv</string>
    <string name="example_trail_min_elevation">1500 m\nMin elv</string>
    <string name="example_trail_author">Created by Toto</string>
    <string name="example_trail_poi_name">The best view in the world</string>
    <string name="example_trail_poi_description">I ensure you, this is the most beautiful view in the world!</string>
    <string name="example_trail_poi_elevation">2000 m Elevation</string>
    <string name="example_hiker_name">Toto</string>
    <string name="example_hiker_email">toto@toto.com</string>
    <string name="example_hiker_registration_date">2020/02/18</string>
    <string name="example_hiker_live_location">Toto city</string>
    <string name="example_hiker_age">5 years old</string>
    <string name="example_hiker_description">My name is Toto. I really like Hiking.</string>
    <string name="example_hiker_history">Toto created a new trail in Alberta, Canada.</string>
    <string name="example_event_name">Awesome event</string>
    <string name="example_event_description">This will be a awesome event! Come on everybody!</string>
    <string name="example_event_begin_date">2020/03/14</string>
    <string name="example_event_end_date">2020/03/15</string>
    <string name="example_event_begin_date_full">Saturday March 14th 9:00 AM</string>
    <string name="example_event_end_date_full">Sunday March 15th 6:00 PM</string>
    <string name="example_event_nb_days">2 days</string>
    <string name="example_event_author">Facilitated by Toto</string>
    <string name="example_event_registered_hikers">5 persons attend</string>
    <string name="message_text_field_empty">Mandatory</string>
    <string name="message_unknown_short">\?</string>
</resources>