<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_add">
        <item
            android:id="@+id/menu_add_trail"
            android:title="@string/menu_new_trail"
            android:icon="@drawable/ic_trail_white">
            <menu>
                <group
                    android:id="@+id/menu_add_new_trail">
                    <item
                        android:id="@+id/menu_add_trail_load_gpx"
                        android:title="@string/menu_new_trail_load_gpx"/>
                    <item
                        android:id="@+id/menu_add_trail_draw"
                        android:title="@string/menu_new_trail_draw"/>
                    <item
                        android:id="@+id/menu_add_trail_record"
                        android:title="@string/menu_new_trail_record"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/menu_add_event"
            android:title="@string/menu_new_event"
            android:icon="@drawable/ic_event_white"/>
    </group>
</menu>