<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/components_margin_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/item_recycler_view_multi_users_message_image_author"
            android:layout_width="@dimen/image_size_mini"
            android:layout_height="@dimen/image_size_mini"
            app:srcCompat="@drawable/ic_person_black"
            android:contentDescription="@string/example_image_content_description"/>

        <TextView
            android:id="@+id/item_recycler_view_multi_users_message_text_author_name_and_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/components_margin_small"
            android:textSize="@dimen/text_size_body"
            android:text="@string/example_chat_user_name_and_date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <View
            android:layout_width="@dimen/image_size_mini"
            android:layout_height="@dimen/image_size_mini" />

        <TextView
            android:id="@+id/item_recycler_view_multi_users_message_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/components_margin_medium"
            android:background="@drawable/shape_corners_round_color_secondary_light"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/colorBlack"
            android:text="@string/example_chat_message"/>

    </LinearLayout>

</LinearLayout>