<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/item_recycler_view_hiker_history_image"
            android:layout_width="@dimen/image_size_small"
            android:layout_height="@dimen/image_size_small"
            android:layout_margin="@dimen/components_margin_medium"
            app:srcCompat="@drawable/ic_trail_black"
            android:contentDescription="@string/example_image_content_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_recycler_view_hiker_history_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/components_margin_small"
                android:layout_marginBottom="@dimen/components_margin_small"
                android:layout_marginStart="@dimen/components_margin_small"
                android:textSize="@dimen/text_size_title"
                android:textColor="@color/colorSecondaryDark"
                android:text="@string/example_hiker_history"/>

            <TextView
                android:id="@+id/item_recycler_view_hiker_history_text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/components_margin_small"
                android:layout_marginStart="@dimen/components_margin_small"
                android:text="@string/example_date"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/components_margin_medium"
        android:layout_marginEnd="@dimen/components_margin_medium"
        android:background="?android:attr/listDivider" />

</LinearLayout>